updated to Docker 1.11

--- a/index/public/index.html
+++ b/index/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cats & Dogs! 🐈 + 🐕</title></head>
+    <title>🐈🐕</title></head>
   <body>
     <p><a href="/cats">Cats!</a></p>
     <p><a href="/dogs">Dogs!</a></p>
